Cambios en el HTML y CSS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="container">
+  <div class="container">
 
     <header>
       <div class="flex-header_content" id="header_main">
