--- a/paisajes.html
+++ b/paisajes.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="container">
+  <div class="container">
 
     <header>
       <div class="flex-header_content" id="header_main">
