Cambio de acentos a codigo ascii.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <div class="footer-container">
         <div class="footer-item">
           <h1>Contacto</h1>
-          <p> <u>Info@gotografia.com</u> <br> Calle 5 con 3 <br> Tel&eacutefono: 123123123</p>
+          <p> <u>Info@gotografia.com</u> <br> Calle 5 con 3 <br> Tel&eacute;fono: 123123123</p>
         </div>
         <div class="footer-item">
-          <h1>T&eacuterminos</h1>
-          <p>Conoce nuestros t&eacuterminos y condiciones </p>
+          <h1>T&eacute;rminos</h1>
+          <p>Conoce nuestros t&eacute;rminos y condiciones </p>
         </div>
         <div class="footer-item">
           <h1>Redes Socilaes</h1>
