--- a/retratos.html
+++ b/retratos.html
@@ -62,11 +62,11 @@
       <div class="footer-container">
         <div class="footer-item">
           <h1>Contacto</h1>
-          <p> <u>Info@gotografia.com</u> <br> Calle 5 con 3 <br> Tel&eacutefono: 123123123</p>
+          <p> <u>Info@gotografia.com</u> <br> Calle 5 con 3 <br> Tel&eacut;efono: 123123123</p>
         </div>
         <div class="footer-item">
-          <h1>T&eacuterminos</h1>
-          <p>Conoce nuestros t&eacuterminos y condiciones </p>
+          <h1>T&eacut;erminos</h1>
+          <p>Conoce nuestros t&eacute;rminos y condiciones </p>
         </div>
         <div class="footer-item">
           <h1>Redes Socilaes</h1>
